--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         
           <h2 class="f5 fw4 mb4 dib mr3">
             <a href="https://abhijyotdas.github.io/Abhijyot-Das-Portfolio/post/project-1/" class="link black dim">
-              Project 1: The Grand Hall
+              Project I. Predicting probability of default on P2P loans - Part 1
             </a>
           </h2>
         
